<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/transitDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/inputLocations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/origin"
        android:layout_width="301dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/origin"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/transitDescription" />

    <EditText
        android:id="@+id/destination"
        android:layout_width="301dp"
        android:layout_height="40dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/destination"
        android:inputType="textPostalAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/origin" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/searchRoutes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <Button
        android:id="@+id/favoritesButton"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/viewFavorites"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapButton" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/checkbox"
        android:onClick="onCheckboxClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/destination" />

    <Button
        android:id="@+id/mapButton"
        android:layout_width="327dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/mapRoute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton" />

</androidx.constraintlayout.widget.ConstraintLayout>