<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/card_view_layout"
            android:layout_width="match_parent"
            android:layout_height="93dp"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/originTrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@+id/originStationTimes"
                app:layout_constraintTop_toBottomOf="@+id/minutesTilTrain" />

            <TextView
                android:id="@+id/minutesTilTrain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lineText2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/line"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/originStationTimes" />

            <TextView
                android:id="@+id/originStationTimes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/originStation"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/minutesTilTrain" />

            <TextView
                android:id="@+id/destinationLine"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/destinationStation"
                app:layout_constraintStart_toEndOf="@+id/lineUserInput"
                app:layout_constraintTop_toBottomOf="@+id/originStationTimes" />

            <TextView
                android:id="@+id/lineUserInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/lineText2"
                app:layout_constraintTop_toBottomOf="@+id/originStationTimes" />

            <TextView
                android:id="@+id/destinationUserInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toEndOf="@+id/destinationLine"
                app:layout_constraintTop_toBottomOf="@+id/originStationTimes" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
